bin/testsuite/tests/compiler/src/errors/compiler5129.swg
#global testerror "Err0681"

#test
{
    for 5'u64 to 0'u64
    {
    }
}
